fix uptime graph overflow

--- a/src/public_html/css/index.less
+++ b/src/public_html/css/index.less
@@ -415,6 +415,7 @@ tr.no-hover {
     margin-top: -20px;
     z-index: 2;
     flex-wrap: nowrap;
+    background: #fff;
 
     div {
         text-align: center;
